--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,12 @@
     <color name="color_linear">#D8632F</color>
     <color name="color_fondo">#EFEFEF</color>
     <color name="color_fondo_splash">#72C5F3</color>
+    <color name="color_font_init">#170633</color>
     <color name="color_saltar">#1D3C72</color>
+    <color name="color_glass">#26183C</color>
+    <color name="fondo_card">#2A294B</color>
+
+
+
+
 </resources>
