--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="body_login">#C4C2C2</color>
     <color name="color_linear">#D8632F</color>
     <color name="color_fondo">#EFEFEF</color>
-    <color name="color_fondo_splash">#72C5F3</color>
+    <color name="color_fondo_splash">#200F50</color>
     <color name="color_font_init">#170633</color>
     <color name="color_saltar">#1D3C72</color>
     <color name="color_glass">#26183C</color>
