--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="color_saltar">#1D3C72</color>
     <color name="color_glass">#26183C</color>
     <color name="fondo_card">#2A294B</color>
+    <color name="color_logo">#FFCB05</color>
+    <color name="color_border_pokemon">#436A6B</color>
 
 
 
